--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,26 +19,26 @@
     - regexp: '^GSSAPIAuthentication'
       line: 'GSSAPIAuthentication no'
 
-# Vagrant SSH configuration.
+# mobile s SSH configuration.
 - name: Configure Vagrant .ssh directory.
   file:
-    path: /home/vagrant/.ssh
+    path: /home/mobile/.ssh
     state: directory
-    owner: vagrant
-    group: vagrant
+    owner: mobile
+    group: mobile
     mode: 0700
 
 - name: Get Vagrant's public key.
   get_url:
     url: https://github.com/mitchellh/vagrant/raw/master/keys/vagrant.pub
-    dest: /home/vagrant/.ssh/authorized_keys
-    owner: vagrant
-    group: vagrant
+    dest: /home/mobile/.ssh/authorized_keys
+    owner: mobile
+    group: mobile
     mode: 0600
 
 # VirtualBox tools installation.
 - name: Check if VirtualBox is running the guest VM.
-  stat: path=/home/vagrant/.vbox_version
+  stat: path=/home/mobile/.vbox_version
   register: virtualbox_check
 
 - include_tasks: virtualbox.yml
