--- a/tasks/vmware.yml
+++ b/tasks/vmware.yml
@@ -21,7 +21,7 @@
   - name: Mount VMware tools.
     mount:
       name: /tmp/vmfusion
-      src: /home/vagrant/linux.iso
+      src: /home/mobile/linux.iso
       fstype: iso9660
       state: mounted
 
@@ -39,7 +39,7 @@
   - name: Unmount VMware tools.
     mount:
       name: /tmp/vmfusion
-      src: /home/vagrant/linux.iso
+      src: /home/mobile/linux.iso
       fstype: iso9660
       state: absent
 
@@ -53,6 +53,6 @@
 
   - name: Delete VMWare Tools.
     file:
-      path: /home/vagrant/linux.iso
+      path: /home/mobile/linux.iso
       state: absent
   when: not vmware_install_open_vm_tools
