fix requirement role

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,10 +2,11 @@
 dependencies: []
 
 galaxy_info:
-  author: geerlingguy
+  role_name: packer_debian
+  author: jmbayu
   description: Debian/Ubuntu configuration for Packer.
-  company: "Midwestern Mac, LLC"
-  issue_tracker_url: "https://github.com/geerlingguy/ansible-role-packer-debian"
+  company: "none"
+  issue_tracker_url: "https://github.com/jmbayu/ansible-role-packer-debian"
   license: "license (BSD, MIT)"
   min_ansible_version: 2.4
   platforms:
